plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.16'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.alal'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '11'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    implementation 'org.apache.poi:poi:5.2.0'

    implementation 'com.googlecode.json-simple:json-simple:1.1.1'

    implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.4'
    implementation group: 'org.springdoc', name: 'springdoc-openapi-security', version: '1.6.4'
    testImplementation group: 'org.springdoc', name: 'springdoc-openapi-webmvc-core', version: '1.6.4'
    testImplementation 'com.github.tomakehurst:wiremock-jre8:2.33.0'

    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
    testImplementation 'org.projectlombok:lombok:1.18.26'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'

    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    //mysql
    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.33'

    implementation 'org.springframework.boot:spring-boot-starter-webflux'


    //live Server
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

}

tasks.named('test') {
    useJUnitPlatform()
}
